src/test/ui/type-alias-impl-trait/nested-tait-inference.stderr
error[E0277]: the trait bound `(): Foo<FooX>` is not satisfied
  --> $DIR/nested-tait-inference.rs:14:5
   |
LL |     ()
   |     ^^ the trait `Foo<FooX>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Foo<()>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
